# python-boilerplate

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.ci/: Dockerfile  entrypoint.sh
.github/workflows/: build.yaml
src/python_boilerplate/: hello.py
src/python_boilerplate.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_python_boilerplate.py
