[tool.poetry]
name = "python-boilerplate"
version = "0.1.0"
description = ""
authors = ["Simone <simone.biffi.91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.1"
pre-commit = "^1.20.0"
pytest = "^5.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
